    * Updated recreatedb for API changes (CNY-1263)
    * A "no new troves available" error message is now given when there are
      no new versions to migrate to (CNY-1246)
    * Attempting to clone without name or contact information set now gives
      a proper error message (CNY-1315)
    * The client code no longer exits with a sys.exit(0) if one of the
      callbacks fails (CNY-1271).

Changes in 1.1.16:
  o Server Changes:
    * The repository now returns recursive changesets with special
      "removed" trove changesets if a trove is missing or has been
      removed.  This allows the client to determine if it has the
      needed troves to perform an update.  Previously, the repository
      would raise an exception, which prevented updates from mirrors
      with byDefault=False troves (such as :debuginfo) excluded.
    * A getTroveInfo() method has been added to the Conary repository
      server.
    * Repository changeset cache database operations are now retried
      before giving up (CNY-1143)

  o Client Changes:
    * A new "isMissing" trove flag has been added.  This flag is set
      by a Conary repository when a Trove is missing.  This allows the
      client to display an appropriate message when it attempts to
      update from an incomplete mirror.
    * Including a configuration file from an unreachable URL will now
      reasonably time out instead of hanging for 3 minutes (the default TCP
      connection timeout). (CNY-1161)
    * Conary will now correctly erase a trove whose files have changed owners
      or groups to values not mapped to users or groups on the current system.
      (CNY-1071)
    * Conary will now display files that are transient as transient when
      --tags is used.
    * Support for the new getTroveInfo() method has been added to the
      Conary repository client.

  o Build changes:
    * The "cvc cook" command will now log a message when deleting old
      build trees to make way for an upcoming build.